# bootsplash-manager

./: CMakeLists.txt  PKGBUILD  README.md  main.cpp  org.manjaro.bootsplash-manager.policy
.github/: FUNDING.yml
data/: bootsplash-manager.desktop
data/translations/: bootsplash-manager.ts  bootsplash-manager_de_DE.ts  bootsplash-manager_fr_FR.ts  bootsplash-manager_ru_RU.ts
images/: icons.qrc
src/: bootsplash-manager-gui.cpp  bootsplash-manager.cpp  bootsplash-viewer.c  bootsplash_file.h  installdialog.cpp  installdialog.h  installdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  root-actions.cpp  root-actions.h
src/gui/: bootsplash-manager-gui.cpp  bootsplash-viewer.c  installdialog.cpp  installdialog.h  installdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/helper/: bootsplashmanager.actions  helper.cpp  helper.h
